# Meika256

./: Cargo.toml  LICENSE  README.md  enc.meika  out.txt
.github/workflows/: build-linux.yml  build-windows.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
config/: defaults.yaml  meika256.yaml
dll/: Cargo.toml
dll/src/: lib.rs
engine/: Cargo.toml
engine/src/: aeswrap.rs  keyderivation.rs  lib.rs  meika.rs  plugin_system.rs
engine/tests/: failure_tests.rs  meika_tests.rs
installer/: meika256.iss  meika256.wxs
installer/staging/: LICENSE
installer/staging/sdk/examples/: example.c
installer/staging/sdk/include/: meika256.h
installer/staging/sdk/lib/: meika256.lib
meika256-sdk/: README.md
meika256-sdk/examples/: example.c
meika256-sdk/include/: meika256.h
vscode-extension/: package.json  ts.config
vscode-extension/src/: extension.ts  panel.ts
